# chessarbiter

./: CMakeLists.txt  Makefile  README.md
src/: Board.cpp  Board.hpp  ChessArbiter.cpp  ChessArbiter.hpp  Fen.cpp  Fen.hpp  Piece.cpp  Piece.hpp
tests/: CMakeLists.txt  board.cpp  chessarbiter.cpp  fen.cpp
